...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProxyPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="true"
        tools:listitem="@layout/item_proxy_option" />

...
