...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_small"
                        android:text="@string/preferred_browser_change" />

                    <include
                        android:id="@+id/buttonBrowserModeGuide"
                        layout="@layout/view_help_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

...
                        style="@style/Widget.FixupXer.SettingsAction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/conversion_defaults" />

                    <include
                        android:id="@+id/browserFrontendsHelp"
                        layout="@layout/view_help_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

...
                        android:layout_height="wrap_content"
                        android:accessibilityHeading="true"
                        android:text="@string/after_clean_behavior"
                        android:textAppearance="@style/TextAppearance.FixupXer.SettingsHeading" />

                    <include
                        android:id="@+id/afterCleanHelp"
                        layout="@layout/view_help_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <RadioGroup
                        android:id="@+id/radioGroupActionMode"
...
